[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myrid"
version = "0.1.0"
description = "MyRid QGIS Plugin - 道路数据处理与OpenLR编码系统"
authors = [{ name = "MyRid Team", email = "test@163.com" }]
license = { text = "GPL-2.0" }
readme = "README_Technical.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["QGIS", "GIS", "OpenLR", "road", "mapping", "plugin"]
dependencies = [
    "shapely>=1.8.0",
    "pyproj>=3.4.0",
    "networkx>=2.8.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "psycopg2-binary>=2.9.0",
    "geographiclib>=1.52",
]

[project.optional-dependencies]
dev = ["pylint>=2.15.0", "black>=22.10.0", "pytest>=7.2.0", "pytest-cov>=4.0.0"]
geo = ["geopandas>=0.12.0", "osmnx>=1.2.0"]
qt = ["PyQt5>=5.15.0"]

[project.urls]
Homepage = "https://github.com/sfgwfn1402/MyRid"
Repository = "https://github.com/sfgwfn1402/MyRid.git"
Documentation = "https://github.com/sfgwfn1402/MyRid/blob/main/README_Technical.md"
"Bug Tracker" = "https://github.com/sfgwfn1402/MyRid/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "lib*", "ui*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
myrid = [
    "config/*.json",
    "data/*.json",
    "images/**/*",
    "ui/*.ui",
    "*.qrc",
    "*.qss",
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # 排除特定目录
  | ui/.*\.py  # Qt生成的UI文件
  | resources_rc\.py  # Qt资源文件
  | lib/osmnx  # 第三方库
  | lib/openlr  # 第三方库
)/
'''

[tool.pylint.main]
load-plugins = ["pylint.extensions.docparams"]
extension-pkg-whitelist = ["PyQt5"]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "import-error",           # QGIS导入问题
    "no-name-in-module",      # PyQt5模块问题
]

[tool.pylint.format]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src", "lib"]
omit = [
    "*/tests/*",
    "*/ui/*_ui.py",      # Qt生成的文件
    "*/resources_rc.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
